-issue#622: Can not connect to MySQL over a socket
-issue#628: Cacti upgrade process is complex and error pront for developers
-issue#635: Error when saving change to data template
-issue#637: When displaying tree graphs, use the same layout as preview mode
-issue#646: When a plugin is disabled during page operations, warnings can appear
-issue: List for creating a Graph type shows already added Graph Templates
-issue: Fix and undefined variable on data source page when first creating a manual data source
-issue: Remove tabindex and other non-required manual aria controls from pages
-issue: Table type and column type in poller_output table wrong
-issue: FILTER_VALIDATE_MAC not defined on PHP less than 5.5
-feature: Dutch translations
-feature: Responsive Graphs page
-feature: Convert forms from table based to div based for responsive design
-feature: Better support for phones and tablets
-feature: Simplified installation code to facilitate easier release cycle
-feature: Updating Tablesorter to v2.28.9, adding widgets and pager

1.1.5
-issue#580: Data collection warnings when using cmd.php
-issue#592: Incorrectly formatted HTML
-issue#606: Replace <path_php_binary> in data input methods
-issue#607: Allow draw_menu to specify multiple actions for the same URL
-issue#608: Spaces adjacent to double quotes are eliminated during data input method import
-issue#609: Honor the column setting in graph tree view mode
-issue#610: Change Graph Template action not available
-issue#611: Cacti Installation Wizard - Spine page incorrect on Windows
-issue#612: Uncaught Error: Call to a member function row() on a string
-issue#613: Network Automation, now requires a site or your are unable to save rules
-issue#615: Data Input field length too short for longer scripts
-issue#619: Export logging option in settings no longer used

1.1.4
-issue#524: Reporting not working when Tree branch is device