@@ -59,16 +59,13 @@ function clog_purge_logfile() {
 }
 
 function clog_view_logfile() {
-	global $config, $colors, $log_tail_lines, $page_refresh_interval;
+	global $config;
 
 	$logfile = read_config_option('path_cactilog');
 
 	if ($logfile == '') {
 		$logfile = './log/cacti.log';
 	}
-
-	/* helps determine output color */
-	$linecolor = true;
 
 	/* ================= input validation and session storage ================= */
 	$filters = array(
@@ -94,6 +91,8 @@ function clog_view_logfile() {
 			)
 	);
 
+	$clogAdmin = clog_admin();
+
 	validate_store_request_vars($filters, 'sess_clog');
 	/* ================= input validation ================= */
 
@@ -104,16 +103,18 @@ function clog_view_logfile() {
 	load_current_session_value('page_referrer', 'page_referrer', 'view_logfile');
 
 	$refresh['seconds'] = get_request_var('refresh');
-	$refresh['page']    = $config['url_path'] . 'clog' . (!clog_admin() ? '_user':'') . '.php?header=false';
+	$refresh['page']    = $config['url_path'] . 'clog' . (!$clogAdmin ? '_user' : '') . '.php?header=false';
 	$refresh['logout']  = 'false';
 
 	set_page_refresh($refresh);
 
-	if ((isset_request_var('purge_continue')) && (clog_admin())) clog_purge_logfile();
+	if ($clogAdmin && isset_request_var('purge_continue')) {
+		clog_purge_logfile();
+	}
 
 	general_header();
 
-	if ((isset_request_var('purge')) && (clog_admin())) {
+	if ($clogAdmin && isset_request_var('purge')) {
 		form_start('clog.php');
 
 		html_start_box(__('Purge'), '50%', '', '3', 'center', '');
@@ -164,19 +165,19 @@ function clog_view_logfile() {
 		$logcontents = array_reverse($logcontents);
 	}
 
-	if (!clog_admin()) {
-		if (strlen($exclude_regex)) {
+	if (!$clogAdmin) {
+		if ($exclude_regex != '') {
 			$ad_filter = ' - Admin Filter in Affect';
-		}else{
+		} else {
 			$ad_filter = ' - No Admin Filter in Affect';
 		}
-	}else{
+	} else {
 		$ad_filter = ' - Admin View';
 	}
 
 	if (get_request_var('message_type') > 0) {
 		$start_string = __('Log [Total Lines: %d %s - Additional Filter in Affect]', sizeof($logcontents), $ad_filter);
-	}else{
+	} else {
 		$start_string = __('Log [Total Lines: %d %s - No Other Filter in Affect]', sizeof($logcontents), $ad_filter);
 	}
 
@@ -190,14 +191,13 @@ function clog_view_logfile() {
 		$host_start = strpos($item, 'Device[');
 		$ds_start   = strpos($item, 'DS[');
 
-		$new_item = '';
-
-		if ((!$host_start) && (!$ds_start)) {
+		if (!$host_start && !$ds_start) {
 			$new_item = cacti_htmlspecialchars($item);
-		}else{
+		} else {
+			$new_item = '';
 			while ($host_start) {
 				$host_end    = strpos($item, ']', $host_start);
-				$host_id     = substr($item, $host_start+7, $host_end-($host_start+7));
+				$host_id     = substr($item, $host_start + 7, $host_end - ($host_start + 7));
 				$new_item   .= cacti_htmlspecialchars(substr($item, 0, $host_start + 7)) . "<a href='" . cacti_htmlspecialchars($config['url_path'] . 'host.php?action=edit&id=' . $host_id) . "'>$host_id</a>";
 				$host_description = db_fetch_cell_prepared('SELECT description FROM host WHERE id = ?', array($host_id));
 				$new_item   .= '] Description[' . cacti_htmlspecialchars($host_description) . '';
@@ -208,7 +208,7 @@ function clog_view_logfile() {
 			$ds_start = strpos($item, 'DS[');
 			while ($ds_start) {
 				$ds_end    = strpos($item, ']', $ds_start);
-				$ds_id     = substr($item, $ds_start+3, $ds_end-($ds_start+3));
+				$ds_id     = substr($item, $ds_start + 3, $ds_end - ($ds_start + 3));
 				$graph_ids = clog_get_graphs_from_datasource($ds_id);
 				$graph_add = $config['url_path'] . 'graph_view.php?page=1&style=selective&action=preview&graph_add=';
 
@@ -222,48 +222,47 @@ function clog_view_logfile() {
 					foreach($graph_ids as $key => $title) {
 						$graph_add .= ($i > 0 ? '%2C' : '') . $key;
 						$i++;
-						if (strlen($titles)) {
+						if ($titles != '') {
 							$titles .= ",'" . cacti_htmlspecialchars($title) . "'";
-						}else{
+						} else {
 							$titles .= "'"  . cacti_htmlspecialchars($title) . "'";
 						}
 					}
-					$new_item  .= cacti_htmlspecialchars($graph_add) . "' title='" . __('View Graphs') . "'>" . $titles . '</a>';
+					$new_item .= cacti_htmlspecialchars($graph_add) . "' title='" . __('View Graphs') . "'>" . $titles . '</a>';
 				}
 
-				$item      = substr($item, $ds_end);
-				$ds_start  = strpos($item, 'DS[');
+				$item     = substr($item, $ds_end);
+				$ds_start = strpos($item, 'DS[');
 			}
 
 			$new_item .= cacti_htmlspecialchars($item);
 		}
 
+		/* respect the exclusion filter */
+		if (!$clogAdmin && @preg_match($exclude_regex, $new_item)) {
+			continue;
+		}
+
 		/* get the background color */
-		if ((substr_count($new_item, 'ERROR')) || (substr_count($new_item, 'FATAL'))) {
+		if (substr_count($new_item, 'ERROR') || substr_count($new_item, 'FATAL')) {
 			$class = 'clogError';
-		}elseif (substr_count($new_item, 'WARN')) {
+		} elseif (substr_count($new_item, 'WARN')) {
 			$class = 'clogWarning';
-		}elseif (substr_count($new_item, ' SQL ')) {
+		} elseif (substr_count($new_item, ' SQL ')) {
 			$class = 'clogSQL';
-		}elseif (substr_count($new_item, 'DEBUG')) {
+		} elseif (substr_count($new_item, 'DEBUG')) {
 			$class = 'clogDebug';
-		}elseif (substr_count($new_item, 'STATS')) {
+		} elseif (substr_count($new_item, 'STATS')) {
 			$class = 'clogStats';
-		}else{
+		} else {
 			if ($linecolor) {
 				$class = 'odd';
-			}else{
+			} else {
 				$class = 'even';
 			}
 			$linecolor = !$linecolor;
 		}
 
-		/* respect the exclusion filter */
-		$show = true;
-		if ((!clog_admin()) && (@preg_match($exclude_regex, $new_item))) {
-			$show = false;
-		}
-		if ($show) {
 		?>
 		<tr class='<?php print $class;?>'>
 			<td>
@@ -273,9 +272,8 @@ function clog_view_logfile() {
 		<?php
 		$j++;
 		$i++;
-		}
 
-		if ($j > 1000) {
+		if ($j >= 1000) {
 			?>
 			<tr class='even'>
 				<td>
